--- a/package.json
+++ b/package.json
@@ -17,14 +17,19 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.2.0",
     "clsx": "^2.1.1",
+    "html-react-parser": "^5.1.10",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.381.0",
     "next": "14.2.3",
+    "next-cloudinary": "^6.6.2",
+    "next-themes": "^0.3.0",
     "prisma": "^5.14.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-parser": "^1.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
@@ -37,6 +42,10 @@
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} scripts/seed.ts"
   }
 }
