--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.4.2",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.2.0",
@@ -32,6 +35,7 @@
     "react-parser": "^1.0.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
+    "vaul": "^0.9.1",
     "zod": "^3.23.8"
   },
   "devDependencies": {
