--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@hookform/error-message": "^2.0.1",
     "@hookform/resolvers": "^3.4.2",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.2.0",
