--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "next": "14.2.3",
     "next-cloudinary": "^6.6.2",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.13",
+    "openai": "^4.51.0",
     "prisma": "^5.14.0",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0-rc2",
@@ -45,6 +47,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
